2009-05-23  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/feedback.c: 
	Remove va_list init to NULL

2009-05-22  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/xnee_session.c (xnee_close_down): 
	Checking grab_keys is not NULL before free

	* libxnee/src/xnee_grab.c (xnee_new_grab_keys): 
	Minor coding standard update (added {})
	Free old grabs before setting new 

	* libxnee/src/xnee_alloc.c (xnee_new_xnee_data): 
	Setting grab_keys to NULL as init value

	* configure.in: 
	* gnee/src/Makefile.am (INCLUDES): 
	* pnee/src/Makefile.am (INCLUDES): 
	Better depencency handling (libgnomeui, gtk)

	* libxnee/test/Makefile.am (testcallback_SOURCES): 
	Moved defs before use

	* libxnee/src/print.c (xnee_print_xnee_settings): 
	Fixed ugly typo 

2009-05-20  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/print.c (xnee_print_xnee_settings): 
	Fixed seg fault on solaris, faulty if statement fixed

2009-05-09  Henrik Sandklef  <hesa@sandklef.com>

	* doc/xnee.texi (Top): 
	Moved Top node outside of ifinfo statment

	* doc/Makefile.am: 
	Falling back to one rule for ps and pdf 

2009-04-27  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/xnee_replay.c (xnee_setup_rep_recording): 
	(c) year updated		

	* configure.in: 
	Finally, Version set to 3.03

2009-04-22  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/print.c (xnee_version): 
	(c) years updated

	* cnee/src/cnee_printer.c: 
	Minor indentation fixes
	Removed unused variables

	* libxnee/src/xnee_session.c: 
	Type casting to int (to remove compiler warnings)
	(c) year updated	

	* libxnee/src/feedback.c: 
	(c) year updated	
	Fixed pedantic warnings (function pointer)
	
	* libxnee/src/xnee_alloc.c: 
	obsoleted function: xnee_reset_retype_info
	(c) year updated

	* libxnee/src/xnee_callback.c: 
	(c) year updated	
	Fixed pedantic warnings

	* libxnee/src/xnee_display.c: 
	Added missing return statement
	(c) year updated
	Type casting to int (to remove compiler warnings)
